--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,17 +23,17 @@
                 android:gravity="center"
                 android:onClick="front"
                 android:text="@string/card_front"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="48dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:onClick="back"
                 android:text="@string/card_back"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
         </LinearLayout>
 
         <ImageView
@@ -48,6 +48,25 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:scaleType="fitCenter"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_save"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:onClick="save"
+                android:text="@string/save"
+                android:visibility="gone"
+                android:textSize="16sp" />
+        </LinearLayout>
 
     </LinearLayout>
 
